--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
     "ejs": "~2.5.6",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "express": "~4.15.2",
+    "morgan": "^1.8.2",
+    "serve-favicon": "^2.4.3"
   },
- "engines": {
+  "engines": {
     "node": "v6.11.X",
     "npm": "3.10.X"
   }
