--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve-favicon": "^2.4.3"
   },
   "engines": {
-    "node": "v6.11.X",
-    "npm": "3.10.X"
+    "node": "*",
+    "npm": "*"
   }
 }
