--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "^1.8.2",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+ "request": "2.61.0"
   },
   "engines": {
     "node": "*",
