--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "~4.15.x",
     "morgan": "^1.8.2",
     "serve-favicon": "^2.4.3",
  "request": "2.61.0"
